# cis194

./: README.md  cis194.cabal
src/: Homework1.hs
src/Homework2/: Log.hs  LogAnalysis.hs
src/Homework3/: Golf.hs
test/: HSpecTests.hs
