name:           CIS194
version:        0.0
synopsis:       Homework for CIS-194 class, UPenn
author:         Tim McIver
build-type:     Simple
cabal-version:  >= 1.10
         
Library
     Build-Depends:     base >= 3 && < 5
     Exposed-modules:   Homework1
     hs-source-dirs: src
     ghc-options:       -Wall
   default-language:    Haskell2010

test-suite tests
   ghc-options: -Wall
   default-extensions:  OverloadedStrings
   type: exitcode-stdio-1.0
   hs-source-dirs: test, src
   main-is: HSpecTests.hs
   build-depends:       base,
                        hspec                >= 1.8
   default-language:    Haskell2010
